fix ipad alignment for cello

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -49,7 +49,7 @@ body {
   }
 
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1024px) {
     &::after {
       background-size: cover !important;
       background-position: right !important;
